[package]
name = "terraswap-pair"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Terraswap pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.3.0"}
cw2 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "v0.7.x" } 
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "v0.7.x" } 
cosmwasm-std = { version = "0.15.0" }
cw-storage-plus = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "v0.7.x" } 
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = "0.15.0"
terra-cosmwasm = { version = "2.1.0" }
cosmwasm-storage = { version = "0.15.0" }