[package]
name = "terraswap-pair"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Terraswap pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.4.0-rc1"}
cw2 = { version = "0.8.0-rc1" } 
cw20 = { version = "0.8.0-rc1" } 
cosmwasm-std = { version = "0.16.0-rc5" }
cw-storage-plus = { version = "0.8.0-rc1" } 
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.2.0-rc3"

[dev-dependencies]
cosmwasm-schema = "0.16.0-rc5"
terra-cosmwasm = { version = "2.2.0-rc3" }
cosmwasm-storage = { version = "0.16.0-rc5" }