[package]
name = "terraswap-router"
version = "0.1.0"
authors = ["Terraform Labs, PTE.", "DELIGHTLABS"]
edition = "2018"
description = "A Terraswap router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.13.2" } 
cosmwasm-std = { version = "1.0.0" }
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.5.1"}
cw-storage-plus = { version = "0.13.2"}
integer-sqrt = "0.1.5"
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-bignumber = { git = "https://github.com/terra-money/terra-cosmwasm", branch = "feature/wasm-1.0" }
cw20-legacy = { version = "0.2.0", features = ["library"]} 

[dev-dependencies]
cosmwasm-storage = { version = "1.0.0" }
cosmwasm-schema = { version = "1.0.0" }
