[package]
name = "terraswap-token"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/terraswap/terraswap"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { version = "0.8.0" } 
cw2 = { version = "0.8.0" } 
cw20 = { version = "0.8.0" } 
cw20-legacy = { version = "0.2.0", features = ["library"]} 
cw-storage-plus  = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
terraswap = { path = "../../packages/terraswap", version = "2.4.1" }

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
