[package]
name = "terraswap-token"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/terraswap/terraswap"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { version = "0.10.3" } 
cw2 = { version = "0.13.1" } 
cw20 = { version = "0.11.0" } 
cw20-legacy = { git = "https://github.com/terra-money/cosmwasm-contracts", branch="feature/wasm-1.0", features = ["library"]} 
cw-storage-plus  = { version = "0.13.1" } 
cosmwasm-std = { version = "1.0.0-beta7" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.5.1"}

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "1.0.0-beta6" }
cosmwasm-storage = { version = "1.0.0-beta6" }
